--- a/SiVObject_Demo.ipynb
+++ b/SiVObject_Demo.ipynb
@@ -12,7 +12,7 @@
     "import scipy as sp\n",
     "import pyvista as pv\n",
     "\n",
-    "from siv import SiVObject"
+    "from siv import SiV"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "siv = SiVObject()"
+    "siv = SiV()"
    ]
   },
   {
