--- a/notebooks/CavityQED_Demo.ipynb
+++ b/notebooks/CavityQED_Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,8 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import curve_fit, minimize\n",
     "\n",
-    "from siv import SiV\n",
-    "from cavity import Cavity, CavitySiV\n",
+    "from sivqed.models.siv import SiV\n",
+    "from sivqed.models.cavity import Cavity, CavitySiV\n",
     "\n",
     "plt.rcParams['font.size'] = 18"
    ]
@@ -739,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
