Add MCMC function to fitter module, add MCMC to fitting demo

--- a/notebooks/fitting data - 2021_03_03_stitched.ipynb
+++ b/notebooks/fitting data - 2021_03_03_stitched.ipynb
@@ -868,13 +868,17 @@
    "outputs": [],
    "source": [
     "def mcmc(freqs, counts, model, results, input_params=None):\n",
+    "    # Add additional (nuisance) parameter to model the data uncertainty\n",
+    "    # This range should correspond to the expected noise in the data\n",
     "    results.params.add('__lnsigma', value=np.log(50), min=np.log(1), max=np.log(5000))\n",
     "    \n",
+    "    # Default emcee parameters, can be overwritten by input_params\n",
     "    emcee_params = {\"is_weighted\": False, \"burn\": 300, \"steps\": 6000, \"thin\": 1}\n",
     "    if input_params is not None: \n",
     "        emcee_params.update(input_params)\n",
     "    emcee_results = model.fit(counts, results.params, w=freqs, method=\"emcee\", fit_kws=emcee_params)\n",
     "    \n",
+    "    # Check the autocorrelation time, guideline is num_steps should be 50 x t_cor\n",
     "    try:\n",
     "        print(f\"Autocorrelation times: {emcee_results.acor}\")\n",
     "        print(f\"Max 50 x Autocorrelation times: {max(50 * emcee_results.acor)}\\n\")\n",
@@ -884,18 +888,22 @@
     "    fitted_var_names = [param.name for param in emcee_results.params.values() if param.vary]\n",
     "    fitted_values = [param.value for param in emcee_results.params.values() if param.vary]\n",
     "    \n",
+    "    # Plot the corner plot for how the variables relate to one another\n",
     "    emcee_plot = corner.corner(emcee_results.flatchain, labels=emcee_results.var_names, truths=fitted_values)\n",
-    "\n",
+    "    \n",
+    "    # General rule of thumb is that acceptance fraction should be ~0.5\n",
     "    plt.figure()\n",
-    "    plt.plot(emcee_results.acceptance_fraction, 'b')\n",
-    "\n",
+    "    plt.plot(emcee_results.acceptance_fraction, 'b') \n",
+    "    \n",
+    "    # Print the median point from the MCMC chains\n",
     "    print('Median of posterior probability distribution')\n",
     "    print('--------------------------------------------')\n",
     "    lmfit.report_fit(emcee_results.params, min_correl=0.4)\n",
     "    \n",
+    "    # Obtain the Maximum Likelihood Estimation\n",
     "    highest_prob_idx = np.argmax(emcee_results.lnprob)\n",
     "    mle_soln = emcee_results.chain[np.unravel_index(highest_prob_idx, emcee_results.lnprob.shape)]\n",
-    "\n",
+    "    # Copy the original results object and replace with MLE values\n",
     "    emcee_mle_params = emcee_results.params.copy()\n",
     "    for i, name in enumerate(fitted_var_names):\n",
     "        emcee_mle_params[name].value = mle_soln[i]\n",
@@ -905,7 +913,8 @@
     "    print('Parameter  MLE Value   Median Value   Uncertainty')\n",
     "    for name in fitted_var_names:\n",
     "        print(f'  {name:5s}  {emcee_mle_params[name].value:11.5f} {emcee_results.params[name].value:11.5f}   {emcee_results.params[name].stderr:11.5f}')\n",
-    "        \n",
+    "    \n",
+    "    # Return median and max likelihood results\n",
     "    return emcee_results, emcee_mle_params"
    ]
   },
