--- a/notebooks/20210629_new_SiV_6338_fitting.ipynb
+++ b/notebooks/20210629_new_SiV_6338_fitting.ipynb
@@ -864,9 +864,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python38264bit163eab01a7b945e3aad1bbef7d8cb1f4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -878,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   },
   "metadata": {
    "interpreter": {
