--- a/notebooks/20210903_DiosBLBb02_cavity.ipynb
+++ b/notebooks/20210903_DiosBLBb02_cavity.ipynb
@@ -3,13 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a5c9f9ed",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import copy\n",
     "import functools\n",
-    "from collections import defaultdict\n",
+    "import win32com.client\n",
     "\n",
     "import lmfit\n",
     "import corner\n",
@@ -35,15 +36,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ee45f8e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cavity_path = \"../data/20210903_Bb02_cavity/\"\n",
+    "datafolder_path = win32com.client.Dispatch(\"WScript.Shell\").CreateShortCut(\"../data.lnk\").Targetpath\n",
+    "cavity_path = datafolder_path + \"/20210903_Bb02_cavity/\"\n",
     "cavity_files = [\"cavity_scan_raw-counts_x_15_40_14.txt\", \"cavity_scan_raw-counts_15_40_14.txt\"]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1bc6cde9",
    "metadata": {},
    "source": [
     "# Plotting Cavity"
@@ -52,6 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "d5224f08",
    "metadata": {},
    "outputs": [
     {
@@ -104,6 +109,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56c288f2",
    "metadata": {},
    "source": [
     "## Unfiltered Cavity"
@@ -112,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "010aaa9f",
    "metadata": {
     "scrolled": false
    },
@@ -183,6 +190,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e580300",
    "metadata": {},
    "source": [
     "## Filtered Cavity"
@@ -191,6 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "b4a91623",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +217,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf74834c",
    "metadata": {},
    "source": [
     "### Filter cavity tails"
@@ -216,6 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "90df4381",
    "metadata": {},
    "outputs": [
     {
@@ -295,6 +306,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f262d40",
    "metadata": {},
    "source": [
     "### Filter SiVs"
@@ -303,6 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "59004f09",
    "metadata": {},
    "outputs": [
     {
@@ -394,6 +407,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b53ce047",
    "metadata": {},
    "source": [
     "## Tilted Cavity"
@@ -402,6 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "aa14bd7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,6 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "263be5db",
    "metadata": {},
    "outputs": [
     {
@@ -501,6 +517,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b10b02d6",
    "metadata": {},
    "source": [
     "# Old Cavity Scan"
@@ -509,6 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "352d5aff",
    "metadata": {},
    "outputs": [
     {
@@ -565,6 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "5b7121e2",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +663,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -658,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
