--- a/notebooks/20210903_DiosBLBb02_linescan.ipynb
+++ b/notebooks/20210903_DiosBLBb02_linescan.ipynb
@@ -3,13 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "46d8f989",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import copy\n",
     "import functools\n",
-    "from collections import defaultdict\n",
+    "import win32com.client\n",
     "\n",
     "import lmfit\n",
     "import corner\n",
@@ -35,10 +36,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "f3f2f687",
    "metadata": {},
    "outputs": [],
    "source": [
-    "siv_path = \"../data/20210903_siv_linescan/\"\n",
+    "datafolder_path = win32com.client.Dispatch(\"WScript.Shell\").CreateShortCut(\"../data.lnk\").Targetpath\n",
+    "siv_path = datafolder_path + \"/20210903_siv_linescan/\"\n",
     "\n",
     "# List of 2-tuples, first is the avg file (which contains the freq values), second is the scans file\n",
     "siv_files = [[\"Edown_Ndown/linescan_down_down_low-readingtrace_x_18_01_33.txt\", \"Edown_Ndown/linescan_down_down_low-readingtracescans_18_01_33.txt\"],  \n",
@@ -51,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2426a79",
    "metadata": {},
    "source": [
     "# Plotting SiV"
@@ -59,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "265ac9cc",
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2094125d",
    "metadata": {},
    "outputs": [
     {
@@ -166,6 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "022fddce",
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "e939f9fc",
    "metadata": {},
    "outputs": [
     {
@@ -282,6 +290,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5b6f91b",
    "metadata": {},
    "source": [
     "# E-Down, N-Down"
@@ -290,6 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "3c0ec5a4",
    "metadata": {
     "scrolled": false
    },
@@ -424,6 +434,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f580248a",
    "metadata": {},
    "source": [
     "# E-Down, N-Down Overnight"
@@ -432,6 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "0172f408",
    "metadata": {},
    "outputs": [
     {
@@ -564,6 +576,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d80c73ff",
    "metadata": {},
    "source": [
     "# E-Down, N-Up"
@@ -572,6 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "d4e0c84c",
    "metadata": {
     "scrolled": false
    },
@@ -706,6 +720,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98c29df4",
    "metadata": {},
    "source": [
     "# E-Up, N-Down"
@@ -714,6 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "99f1e719",
    "metadata": {},
    "outputs": [
     {
@@ -846,6 +862,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d675d4b1",
    "metadata": {},
    "source": [
     "# E-Up, N-Up"
@@ -854,6 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "283ffbc1",
    "metadata": {},
    "outputs": [
     {
@@ -986,6 +1004,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5663fa68",
    "metadata": {},
    "source": [
     "# Combined Fits + Spectral Diffusion"
@@ -994,6 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "cdee42e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,6 +1091,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86f2292c",
    "metadata": {},
    "source": [
     "## Vary k_tot"
@@ -1079,6 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "8901e913",
    "metadata": {
     "scrolled": false
    },
@@ -1275,6 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "7a71fe71",
    "metadata": {
     "scrolled": false
    },
@@ -1309,6 +1332,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a37d2f88",
    "metadata": {},
    "source": [
     "## Fix k_tot"
@@ -1317,6 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "957ce391",
    "metadata": {
     "scrolled": false
    },
@@ -1430,6 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "556b210d",
    "metadata": {},
    "outputs": [
     {
@@ -1462,6 +1488,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d8bb9dd",
    "metadata": {},
    "source": [
     "# Diffusion"
@@ -1470,6 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "44052bfe",
    "metadata": {},
    "outputs": [
     {
@@ -1537,6 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "08b6f700",
    "metadata": {},
    "outputs": [
     {
@@ -1559,6 +1588,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9742e12",
    "metadata": {},
    "source": [
     "# Compute Phase difference"
@@ -1566,6 +1596,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc0071ac",
    "metadata": {},
    "source": [
     "## Using fits with k_tot varying"
@@ -1574,6 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "7072ab15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,6 +1626,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "e62c8350",
    "metadata": {},
    "outputs": [
     {
@@ -1645,6 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "cd3f975d",
    "metadata": {},
    "outputs": [
     {
@@ -1669,6 +1703,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7cc818d3",
    "metadata": {},
    "source": [
     "## Using fits with k_tot fixed"
@@ -1677,6 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "fbdd76d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,6 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "4baa9696",
    "metadata": {
     "scrolled": false
    },
@@ -1755,7 +1792,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1769,7 +1806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
